<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
<GridLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/shift_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="start"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/add_shift_shift_date"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shift_date"
        android:inputType="date"
        android:layout_row="0"

        android:focusable="false"
        android:background="@drawable/background_transparent"
        android:hint="@string/click_me_hint"
        android:layout_column="1"

        android:textSize="20sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time_label"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="20sp"
        android:id="@+id/start_time_label"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_time"
        android:inputType="date"
        android:layout_row="1"
        android:gravity="end"
        android:background="@drawable/background_transparent"
        android:hint="@string/click_me_hint"
        android:layout_column="1"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:focusable="false"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time_label"
        android:textSize="20sp"
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/end_time_label"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_time"
        android:inputType="date"
        android:textSize="20sp"
        android:hint="@string/click_me_hint"
        android:gravity="end"
        android:background="@drawable/background_transparent"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="end"
        android:focusable="false"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_row="3"
        android:id="@+id/hourly_rate_label"
        android:layout_column="0"
        android:text="@string/hourly_rate_label"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_row="3"
        android:inputType="numberDecimal"
        android:id="@+id/hourly_rate"
        android:gravity="end"
        android:layout_gravity="end"
        android:textColor="@android:color/black"
        android:layout_column="1"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid_break_duration"
        android:textSize="20sp"
        android:layout_row="4"
        android:layout_column="0"
        android:id="@+id/paid_break_duration_label"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:inputType="number"
        android:textSize="20sp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="end"
        android:textColor="@android:color/black"

        android:id="@+id/paid_break_duration"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unpaid_break_duration"
        android:textSize="20sp"
        android:layout_row="5"
        android:layout_column="0"
        android:id="@+id/unpaid_break_duration_label"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:inputType="number"
        android:textSize="20sp"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="end"
        android:textColor="@android:color/black"
        android:id="@+id/unpaid_break_duration"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonus_amount"
        android:textSize="20sp"
        android:layout_row="6"
        android:layout_column="0"
        android:id="@+id/bonus_amount_label"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="end"
        android:textColor="@android:color/black"
        android:id="@+id/bonus_amount"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenses_amount"
        android:textSize="20sp"
        android:layout_row="7"
        android:layout_column="0"
        android:id="@+id/expenses_amount_label"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_gravity="end"
        android:textColor="@android:color/black"
        android:id="@+id/expenses_amount"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_new_shift"
        android:layout_row="8"
        android:layout_column="0"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_columnSpan="2"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        />

    <EditText
        android:id="@+id/comments"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/commission_label"
        android:layout_row="10"
        android:layout_column="0"
        android:textSize="20sp"
        android:paddingBottom="4dp"
        android:text="@string/commission_label"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"/>

    <Switch
        android:id="@+id/is_commission"
        android:layout_row="10"
        android:layout_column="1"
        android:layout_gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"
        android:checked="false"
        />

    <TextView
        android:id="@+id/sales_made_amount_label"
        android:layout_row="11"
        android:layout_column="0"
        android:textSize="20sp"
        android:text="@string/sales_made_label"
        android:paddingBottom="4dp"
        android:visibility="gone"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/sales_made_amount"
        android:layout_row="11"
        android:layout_gravity="end"
        android:layout_column="1"
        android:textSize="20sp"
        android:visibility="gone"
        android:paddingBottom="4dp"
        android:inputType="numberDecimal"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/target_amount_label"
        android:layout_row="12"
        android:layout_column="0"
        android:text="@string/target_label"
        android:textSize="20sp"
        android:paddingBottom="4dp"
        android:visibility="gone"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/target_amount"
        android:layout_row="12"
        android:layout_column="1"
        android:textSize="20sp"
        android:paddingBottom="4dp"
        android:inputType="numberDecimal"
        android:visibility="gone"
        android:layout_gravity="end"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"/>


    <Button
        android:text="@string/add_button"
        android:id="@+id/addShift"
        android:layout_marginTop="25dp"
        android:layout_row="13"
        android:layout_column="0"
        android:layout_width="130dp"
        android:background="@color/addButton"
        android:textColor="@color/TextWhite"


        />

    <Button
        android:text="@string/clear_button"
        android:layout_row="13"
        android:id="@+id/clearInput"
        android:layout_marginTop="25dp"
        android:layout_gravity="end"
        android:layout_column="1"
        android:layout_width="130dp"
        android:background="@color/clearAll"
        android:textColor="@color/TextWhite"

        />


</GridLayout>
</ScrollView>