<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
    <GridLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_shift_shift_date"
            android:textSize="20sp"
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/update_shift_date_label"
            android:layout_gravity="start"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_shift_date"
            android:inputType="date"
            android:layout_row="0"
            android:focusable="false"
            android:gravity="end"
            android:background="@drawable/background_transparent"
            android:hint="@string/click_me_hint"
            android:layout_column="1"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time_label"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="20sp"
            android:id="@+id/update_start_time_label"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_start_time"
            android:inputType="date"
            android:layout_row="1"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:hint="@string/click_me_hint"
            android:background="@drawable/background_transparent"
            android:layout_column="1"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:focusable="false"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time_label"
            android:textSize="20sp"
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/update_end_time_label"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_end_time"
            android:inputType="date"
            android:textSize="20sp"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:background="@drawable/background_transparent"
            android:hint="@string/click_me_hint"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="end"
            android:focusable="false"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/hourly_rate_label"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:layout_row="3"
            android:gravity="end"
            android:id="@+id/update_hourly_rate"
            android:layout_gravity="end"
            android:textColor="@android:color/black"
            android:layout_column="1"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_break_duration"
            android:textSize="20sp"
            android:layout_row="4"
            android:layout_column="0"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:inputType="number"
            android:textSize="20sp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="end"
            android:textColor="@android:color/black"
            android:id="@+id/update_paid_break_duration"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unpaid_break_duration"
            android:textSize="20sp"
            android:layout_row="5"
            android:layout_column="0"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:inputType="number"
            android:textSize="20sp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="end"
            android:textColor="@android:color/black"
            android:id="@+id/update_unpaid_break_duration"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonus_amount"
            android:textSize="20sp"
            android:layout_row="6"

            android:layout_column="0"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_gravity="end"
            android:textColor="@android:color/black"
            android:id="@+id/update_bonus_amount"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses_amount"
            android:textSize="20sp"
            android:layout_row="7"
            android:layout_column="0"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="end"
            android:textColor="@android:color/black"
            android:id="@+id/update_expenses_amount"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_new_shift"
            android:layout_row="8"
            android:layout_column="0"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:layout_columnSpan="2"
            android:textColor="@android:color/black"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            />

        <EditText
            android:id="@+id/update_comments"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="0"
            android:textSize="15sp"
            android:layout_marginTop="12dp"
            android:minLines="4"
            android:layout_columnSpan="2"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/update_commission_label"
            android:layout_row="10"
            android:layout_column="0"
            android:textSize="20sp"
            android:paddingBottom="4dp"
            android:text="@string/commission_label"
            android:paddingTop="4dp"
            android:textColor="@android:color/black"/>

        <Switch
            android:id="@+id/update_is_commission"
            android:layout_row="10"
            android:layout_column="1"
            android:layout_gravity="end"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="@android:color/black"
            android:checked="false"
            />

        <TextView
            android:id="@+id/update_sales_made_amount_label"
            android:layout_row="11"
            android:layout_column="0"
            android:textSize="20sp"
            android:text="@string/sales_made_label"
            android:paddingBottom="4dp"
            android:visibility="gone"
            android:paddingTop="4dp"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/update_sales_made_amount"
            android:layout_row="11"
            android:layout_gravity="end"
            android:layout_column="1"
            android:textSize="20sp"
            android:visibility="gone"
            android:paddingBottom="4dp"
            android:inputType="numberDecimal"
            android:paddingTop="4dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/update_target_amount_label"
            android:layout_row="12"
            android:layout_column="0"
            android:text="@string/target_label"
            android:textSize="20sp"
            android:paddingBottom="4dp"
            android:visibility="gone"
            android:paddingTop="4dp"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/update_target_amount"
            android:layout_row="12"
            android:layout_column="1"
            android:textSize="20sp"
            android:paddingBottom="4dp"
            android:inputType="numberDecimal"
            android:visibility="gone"
            android:layout_gravity="end"
            android:paddingTop="4dp"
            android:textColor="@android:color/black"/>



        <Button
            android:text="@string/update_button"
            android:id="@+id/update_shift"
            android:layout_marginTop="25dp"
            android:layout_row="13"
            android:layout_column="0"
            android:layout_width="130dp"
            android:background="@color/addButton"
            android:textColor="@color/TextWhite"


            />

        <Button
            android:text="@string/clear_button"
            android:layout_row="13"
            android:id="@+id/update_clearInput"
            android:layout_marginTop="25dp"
            android:layout_gravity="end"
            android:layout_column="1"
            android:layout_width="130dp"
            android:background="@color/clearAll"
            android:textColor="@color/TextWhite"

            />


    </GridLayout>
</ScrollView>