<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_shift_shift_date"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/shift_date_label"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shift_date"
        android:layout_row="0"
        android:focusable="false"
        android:layout_column="1"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time_label"
        android:layout_row="1"
        android:layout_column="0"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/start_time_label"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_time"
        android:layout_row="1"
        android:layout_column="1"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_gravity="end"
        android:focusable="false"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time_label"
        android:textSize="20sp"
        android:layout_row="2"
        android:textColor="@android:color/black"
        android:layout_column="0"
        android:id="@+id/end_time_label"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_time"
        android:textSize="20sp"
        android:layout_row="2"
        android:layout_column="1"
        android:textColor="@android:color/black"
        android:layout_gravity="end"
        android:focusable="false"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_new_shift"
        android:layout_row="3"
        android:layout_column="0"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:layout_columnSpan="2" />

    <TextView
        android:id="@+id/comments"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_marginTop="12dp"
        android:minLines="4"
        android:layout_columnSpan="2"
        android:ems="10"
        android:gravity="start|top" />


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/hours_worked_label"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/hours_worked"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:textColor="@android:color/black"
        android:layout_column="1"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_gravity="end"
        android:textSize="20sp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/gross_pay_label"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/gross_pay"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_gravity="end"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/commission_earned_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/commission_earned_lbl"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/commission_earned"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="7"
        android:layout_column="1"
        android:textColor="@android:color/black"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_gravity="end"
        android:textSize="20sp"
        />


    <Button
        android:layout_height="wrap_content"
        android:layout_width="130dp"
        android:layout_marginTop="25dp"
        android:layout_row="8"
        android:layout_gravity="left"
        android:layout_column="0"
        android:id="@+id/edit_shift"
        android:textColor="@color/TextWhite"
        android:background="@color/YellowEditShift"
        android:text="@string/edit_shift_button"/>

    <Button
        android:layout_width="130dp"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_gravity="right"
        android:id="@+id/delete_shift"
        android:background="@color/clearAll"
        android:textColor="@color/TextWhite"
        android:layout_column="1"
        android:text="@string/delete_shift_button"
       />







</GridLayout>


</androidx.cardview.widget.CardView>

</ScrollView>



</RelativeLayout>
